DEVELOPER-1754 Fixed visibility of logout link

--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -157,7 +157,9 @@ nav.accounts {
     a.logged-in-name{
       border-left: none;
     }
-
+    li.logged-in {
+      display: none;
+    }
     a {
       color:white;
       // border-left:1px solid white;
